# Rust-Screenshot-Tool

./: Cargo.toml  README.md
src/: controller.rs  data.rs  main.rs  provino.rs  saver.rs  ui.rs
